fix(nav_screen): visibility on docs layout for smaller screens

--- a/packages/theme-default/src/components/NavScreen/index.module.scss
+++ b/packages/theme-default/src/components/NavScreen/index.module.scss
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 0 32px;
+  padding: 32px;
   width: 100%;
   background-color: var(--rp-c-bg);
   overflow-y: auto;
